# NucleoTNC-Firmware

./: .gitignore  .mxproject  CMakeLists.txt  NucleoTNC-Firmware.ioc  Nucleo_L432KC_TNC.ioc  README.md  stlink-nucleotnc.cfg
Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Src/: freertos.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
TNC/: AFSKModulator.cpp  AFSKModulator.hpp  Afsk1200Demodulator.hpp  AudioInput.cpp  AudioInput.hpp  Demodulator.cpp  Demodulator.hpp  Fsk9600Demodulator.hpp  Fsk9600Modulator.cpp  Fsk9600Modulator.hpp  IOEventTask.cpp  KalmanFilter.h  Kiss.hpp  KissHardware.cpp  Log.cpp  Log.h  M17Demodulator.cpp  M17Demodulator.h  M17Encoder.cpp  M17Modulator.cpp  M17Modulator.h  Modulator.hpp  ModulatorTask.cpp  SerialPort.cpp  StandardDeviation.hpp  SymbolSlopeIntegrator.h  TimerAdjust.h  Util.h  power.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
cmake/tnc/: CMakeLists.txt
